@@ -1,3 +1,8 @@
+2010-10-25  Chao-ying Fu  <fu@mips.com>
+
+	* gas/mips/mips32-dsp.d, gas/mips/mips32-dsp.s: Add madd, maddu, msub,
+	msubu, mult, multu.
+
 2010-10-25  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR gas/12049
